[~] - SaveWcfService + CallCenter save file

--- a/CRMPhone/App.config
+++ b/CRMPhone/App.config
@@ -45,17 +45,13 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_ISaveService"  maxBufferPoolSize="2147483647"
-                 maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
-          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647"
-                        maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
-        </binding>
+        <binding name="BasicHttpBinding_ISaveService" maxReceivedMessageSize="16777216"/>
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://192.168.1.124:24801/SaveService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISaveService"
-        contract="SaveWcfService.ISaveService" name="BasicHttpBinding_ISaveService" />
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISaveService"
+                contract="WcfSaveService.ISaveService" name="BasicHttpBinding_ISaveService" />
     </client>
   </system.serviceModel>
 </configuration>
