--- a/RequestService/app.config
+++ b/RequestService/app.config
@@ -6,20 +6,17 @@
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data><system.serviceModel>
+  </system.data>
+    <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_ISaveService"   maxBufferPoolSize="2147483647"
-                         maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
-                <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647"
-                              maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
-              </binding>
+                <binding name="BasicHttpBinding_ISaveService" />
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://192.168.1.124:24801/SaveService.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISaveService"
-                contract="SaveWcfService.ISaveService" name="BasicHttpBinding_ISaveService" />
+                contract="WcfSaveService.ISaveService" name="BasicHttpBinding_ISaveService" />
         </client>
     </system.serviceModel>
 </configuration>
