--- a/SaveWcfService/Web.config
+++ b/SaveWcfService/Web.config
@@ -24,6 +24,11 @@
         <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>    
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    <bindings>
+      <basicHttpBinding>
+        <binding transferMode="Streamed" maxReceivedMessageSize="16777216"/>
+      </basicHttpBinding>
+    </bindings>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
