[~] - Сервися для прикрепленных документов в вебе

--- a/RequestWcfService/Web.config
+++ b/RequestWcfService/Web.config
@@ -3,6 +3,7 @@
   <appSettings>
     <!--<add key="ConnectionServer" value="localhost" />-->
     <add key="ConnectionServer" value="192.168.1.130" />
+    <add key ="rootFolder" value ="F:\RequestAttachments"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
