--- a/SaveWcfService/Web.config
+++ b/SaveWcfService/Web.config
@@ -3,7 +3,7 @@
 
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-    <add key ="rootFolder" value ="D:\1\"/>
+    <add key ="rootFolder" value ="F:\RequestAttachments"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
