--- a/DevinoSmsService/App.config
+++ b/DevinoSmsService/App.config
@@ -12,17 +12,17 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="SmsServiceSoap1" />
         <binding name="ViberServiceSoap1" />
+        <binding name="SmsServiceSoap" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://ws-wsdl.devinotele.com/SmsService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="SmsServiceSoap1"
-        contract="Devino.SmsServiceSoap" name="SmsServiceSoap1" />
       <endpoint address="http://ws-wsdl.devinotele.com/ViberService.asmx"
         binding="basicHttpBinding" bindingConfiguration="ViberServiceSoap1"
         contract="DevinoViber.ViberServiceSoap" name="ViberServiceSoap1" />
+      <endpoint address="http://ws-wsdl.devinotele.com/SmsService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="SmsServiceSoap"
+        contract="Devino.SmsServiceSoap" name="SmsServiceSoap" />
     </client>
     <services>
       <service name="DevinoSmsService.DevinoMessagesService">
