--- a/RequestService/RequestServiceImpl.csproj
+++ b/RequestService/RequestServiceImpl.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Dto\WorkerDto.cs" />
     <Compile Include="Dto\WorkerForFilterDto.cs" />
     <Compile Include="Dto\WorkerHistoryDto.cs" />
+    <Compile Include="MeterListDto.cs" />
     <Compile Include="MetersDto.cs" />
     <Compile Include="MysqlDecorator.cs" />
     <Compile Include="RequestService.cs" />
