--- a/CRMPhone/packages.config
+++ b/CRMPhone/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net40" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net40" />
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net40" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net40" />
